--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
   <link rel="stylesheet" href="flowershop.css">
 </head>
 <body>
-  <div class="nav">
-  <h1 class="heading">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+  <header class="header">
+    <div class="banner">
+      <div>
+  <h1 class="title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
   <p>
     It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br>that it has a more-or-less normal distribution of letters.
   </p>
   <button class="button">Shop Now</button>
 </div>
+<img class="rose" src="/Flower Asset/pngwing 10.png" alt="">
+</div>
+  </header>
+  <div class="midbody">
+    <h1 class="title2">Our Featured Flowers</h1>
+    <p class="paragraph">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. </p>
+  </div>
+  <div class="flowertree">
+    <img src="Flower Asset/pngwing 6.png" alt="">
+    <img src="Flower Asset/pngwing 5.png" alt="">
+    <img src="Flower Asset/pngwing 7.png" alt="">
+  </div>
   
 </body>
 </html>
